[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-bzm-apitest"
version = "1.4.0"
description = "MCP Server for BlazeMeter API Monitoring (Runscope)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.txt" }
keywords = ["mcp", "blazemeter", "runscope", "api-monitoring", "api-testing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "mcp[cli]>=1.19.0",
    "httpx>=0.27.0",
    "pydantic>=2.12.3",
    "pydantic-core>=2.41.4",
    "defusedxml>=0.7.1",
    "nh3>=0.3.2",
    "opentelemetry-api>=1.20.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]
build = [
    "pyinstaller>=6.16.0",
]
telemetry = [
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/Runscope/mcp-bzm-apitest"
Repository = "https://github.com/Runscope/mcp-bzm-apitest"
Issues = "https://github.com/Runscope/mcp-bzm-apitest/issues"

[project.scripts]
mcp-bzm-apitest = "main:main"

[tool.setuptools]
packages = ["src", "src.common", "src.config", "src.formatters", "src.models", "src.tools"]
py-modules = ["main"]

[tool.flake8]
max-line-length = 108
extend-ignore = ["E203", "W503"]

[tool.black]
line-length = 108

[tool.isort]
profile = "black"

